Opened 15 years ago
Closed 15 years ago
#765 closed defect (fixed)
sig6 memory exceeded
| Reported by: | Diana Muscalu | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | westwood large chunk OOM |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
==4028== Memcheck, a memory error detector
==4028== Copyright (C) 2002-2010, and GNU GPL'd, by Julian Seward et al.
==4028== Using Valgrind-3.6.1-Debian and LibVEX; rerun with -h for copyright info
==4028== Command: /home/vlad/Desktop/ffmpeg/ffmpeg_g -i corruptfile -f null -
==4028==
ffmpeg version N-35772-g366605f, Copyright (c) 2000-2011 the FFmpeg developers
built on Dec 13 2011 22:32:03 with gcc 4.6.1
configuration:
libavutil 51. 32. 0 / 51. 32. 0
libavcodec 53. 44. 0 / 53. 44. 0
libavformat 53. 25. 0 / 53. 25. 0
libavdevice 53. 4. 0 / 53. 4. 0
libavfilter 2. 53. 0 / 2. 53. 0
libswscale 2. 1. 0 / 2. 1. 0
[wsvqa @ 0x5674820] Skipping unknown chunk 0x56594652
==4028== Warning: set address range perms: large range [0x393c9080, 0x793c9a8e) (undefined)
==4028== Warning: set address range perms: large range [0x393c9070, 0x793c9a9e) (noaccess)
[wsvqa @ 0x5674820] Estimating duration from bitrate, this may be inaccurate
Input #0, wsvqa, from 'corruptfile':
Duration: 00:00:23.66, bitrate: 88 kb/s
Stream #0:0: Video: ws_vqa, pal8, 320x200, 15 fps, 15 tbr, 15 tbn, 15 tbc
Stream #0:1: Audio: adpcm_ima_ws, 22178 Hz, 1 channels, s16, 88 kb/s
[buffer @ 0x567c3c0] w:320 h:200 pixfmt:pal8 tb:1/1000000 sar:0/1 sws_param:
Output #0, null, to 'pipe:':
Metadata:
encoder : Lavf53.25.0
Stream #0:0: Video: rawvideo, pal8, 320x200, q=2-31, 200 kb/s, 90k tbn, 15 tbc
Stream #0:1: Audio: pcm_s16le, 22178 Hz, 1 channels, s16, 354 kb/s
Stream mapping:
Stream #0:0 -> #0:0 (vqavideo -> rawvideo)
Stream #0:1 -> #0:1 (adpcm_ima_ws -> pcm_s16le)
Press [q] to stop, ? for help
[vqavideo @ 0x568b8c0] VQA video: problem: CBF0 chunk too large (0x8000640 bytes)
[vqavideo @ 0x568b8c0] VQA video: Found unknown chunk type: WPTZ (5750545A)
[vqavideo @ 0x568b8c0] VQA video: problem: no VPTZ chunk found
Last message repeated 1 times
VQA video: decode_format80 problem: next op would overflow dest_index
VQA video: current dest_index = 10369, count = 8272, dest_size = 16000
frame= 7 fps= 0 q=0.0 Lsize= 0kB time=00:00:00.46 bitrate= 0.0kbits/s
video:0kB audio:47kB global headers:0kB muxing overhead -100.000000%
==4028==
==4028== HEAP SUMMARY:
==4028== in use at exit: 264 bytes in 1 blocks
==4028== total heap usage: 214 allocs, 213 frees, 1,079,089,733 bytes allocated
==4028==
==4028== LEAK SUMMARY:
==4028== definitely lost: 264 bytes in 1 blocks
==4028== indirectly lost: 0 bytes in 0 blocks
==4028== possibly lost: 0 bytes in 0 blocks
==4028== still reachable: 0 bytes in 0 blocks
==4028== suppressed: 0 bytes in 0 blocks
==4028== Rerun with --leak-check=full to see details of leaked memory
==4028==
==4028== For counts of detected and suppressed errors, rerun with: -v
==4028== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 4 from 4)
Attachments (3)
Change History (4)
by , 15 years ago
| Attachment: | corruptfile added |
|---|
comment:1 by , 15 years ago
| Component: | FFmpeg → avformat |
|---|---|
| Keywords: | westwood large chunk OOM added |
| Reproduced by developer: | set |
| Resolution: | → fixed |
| Status: | new → closed |



use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )