westwooddemuxer: Fix 1gb alloc Fixes Ticket765 Bug Found by: Diana Elena Muscalu

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit f68b19fc28df0a15fa6134726954365d70dec74f)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>